# c2n

./: LICENSE  README.md
software/c2p/: Cargo.toml  devbox.json  flake.nix
software/c2p/.cargo/: config.toml
software/c2p/agent_host/: Cargo.toml
software/c2p/agent_host/src/: lib.rs  main.rs
software/c2p/agent_hosts/simple_increment/: Cargo.toml
software/c2p/agent_hosts/simple_increment/src/: main.rs
software/c2p/agents/simple_increment/: Cargo.toml  flake.nix
software/c2p/agents/simple_increment/src/: lib.rs
software/c2p/broker/: Cargo.toml
software/c2p/broker/src/: main.rs
software/c2p/engine_host/: Cargo.toml
software/c2p/engine_host/src/: main.rs
software/ccp/agents/simple_increment/: Cargo.toml  flake.nix
software/ccp/engines/simple_increment/: Cargo.toml  Dockerfile  flake.nix
software/ccp/engines/simple_increment/src/: lib.rs
software/pick_the_bit/: README.md
