[workspace]
resolver = "2"
members = [
    "agent_host",
    "agents/simple_increment",
    "agent_hosts/simple_increment"
]

# Common dependencies for all members
#[workspace.dependencies]
#anyhow = "1.0"
#wasmtime = "0.30"
#tokio = { version = "1.0", features = ["full"] }
#tungstenite = "0.20"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"